<resources>
    <string name="app_name">Food Budget</string>
    <string name="add_shop_button">Add New Shop</string>
    <string name="view_shops_button">View Shops</string>
    <string name="location_text">Location</string>
    <string name="price_text">Price</string>
    <string name="date_text">Date</string>
    <string name="save_shop_button">Save Shop</string>
    <string name="select_date_button">Select Date</string>
    <string name="year_total">Year Total</string>
    <string name="week_total">Week Total</string>
    <string name="month_total">Month Total</string>
    <string name="week_average">Week Average</string>
    <string name="month_average">Month Average</string>
    <string name="default_price">£00.00</string>
    <string name="delete_shop_button">Delete Shop</string>
    <string name="view_shop_averages">Shop Calculations</string>
</resources>
