<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddShopActivity">
    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/location_input"
            android:entries="@array/locations"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/location_text"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
    <TextView
            android:layout_height="0dp"
            android:id="@+id/location_text"
            android:layout_width="wrap_content" android:textSize="18sp" android:text="@string/location_text"
            android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="100dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/price_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/price_text" android:textSize="18sp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/location_input" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/price_input" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/price_text"
            app:layout_constraintStart_toEndOf="@+id/textView"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/date_input"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/date_text" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/date_text"
            android:textSize="18sp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/price_input" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <DatePicker android:layout_width="wrap_content" android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone" android:id="@+id/shop_date_picker"
                android:background="@android:color/background_light" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/button" android:elevation="2dp" />
    <Button
            android:text="@string/save_shop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/button" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent" android:onClick="saveShop"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@+id/date_input" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/date_input"
            app:layout_constraintBottom_toBottomOf="@+id/date_input" android:onClick="displayDatePicker"
            android:text="@string/select_date_button" android:elevation="1dp"/>
    <TextView
            android:text="£"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp" android:id="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/price_input"
            app:layout_constraintBottom_toBottomOf="@+id/price_input" android:textSize="18sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>